# hyprspiral

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  TUTORIAL.md  justfile  local_build.sh
.github/workflows/: build-repo.yml
pkgbuilds/hyprland-plugin-spiral/: .SRCINFO  PKGBUILD
pkgbuilds/hyprland-spiral/: .SRCINFO  PKGBUILD  force_render.patch
pkgbuilds/split-monitor-workspaces/: .SRCINFO  PKGBUILD
pkgbuilds/wl-kbptr/: .SRCINFO  PKGBUILD
pkgbuilds/xdg-desktop-portal-hyprland/: .SRCINFO  PKGBUILD
src/: enums.cpp  main.cpp  row.cpp
